// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toaster > components > renders correctly Toast.Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #8c40ef;
  border: none;
  color: #ffffff;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0:hover,
.emotion-0:active {
  background: #792dd4;
  color: #f9f9fa;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Toaster > components > renders correctly Toast.Button and variant ghost 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #ffffff;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-1:hover,
.emotion-1:active {
  background: #e5dbfd;
  color: #521094;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1 emotion-2"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`Toaster > components > renders correctly Toast.Link 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  color: #641cb3;
  text-decoration-color: transparent;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.25rem, 0);
  -moz-transform: translate(-0.25rem, 0);
  -ms-transform: translate(-0.25rem, 0);
  transform: translate(-0.25rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="scaleway.com"
      prominence="stronger"
      variant="bodySmallStrong"
    >
      Test
    </a>
  </div>
</DocumentFragment>
`;

exports[`Toaster > renders correctly with all kind of toast 1`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is an info
</span>
`;

exports[`Toaster > renders correctly with all kind of toast 2`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is a success
</span>
`;

exports[`Toaster > renders correctly with all kind of toast 3`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is an error
</span>
`;

exports[`Toaster > renders correctly with all kind of toast 4`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is a warning
</span>
`;

exports[`Toaster > renders correctly with all kind of toast 5`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  min-height: 3.5rem;
}

.emotion-0 .Toastify__toast-container {
  width: 21.5rem;
}

.emotion-0 .Toastify__toast-body {
  margin: 0;
  padding: 0;
}

.emotion-0.Toastify__toast--success {
  background-color: #151a2d;
  color: #ffffff;
  padding: 1rem;
}

.emotion-0.Toastify__toast--info {
  background-color: #0078d2;
  color: #ffffff;
  padding: 1rem;
}

.emotion-0.Toastify__toast--error {
  background-color: #e51963;
  color: #ffffff;
  padding: 1rem;
}

.emotion-0.Toastify__toast--warning {
  background-color: #fbc600;
  color: #222638;
  padding: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #0078d2;
  border: none;
  color: #ffffff;
  background: none;
  margin: auto;
  margin-left: 0.5rem;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6:active {
  box-shadow: 0px 0px 0px 3px #71c2ff40;
}

.emotion-6:hover,
.emotion-6:active {
  background: #0071c5;
  color: #f9f9fa;
}

.emotion-6:hover,
.emotion-6:active {
  background: none;
  box-shadow: none;
  border: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #2c8564;
  border: none;
  color: #ffffff;
  background: none;
  margin: auto;
  margin-left: 0.5rem;
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-16:active {
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-16:hover,
.emotion-16:active {
  background: #297c5e;
  color: #f9f9fa;
}

.emotion-16:hover,
.emotion-16:active {
  background: none;
  box-shadow: none;
  border: none;
}

.emotion-26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #e51963;
  border: none;
  color: #ffffff;
  background: none;
  margin: auto;
  margin-left: 0.5rem;
}

.emotion-26:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-26:active {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-26:hover,
.emotion-26:active {
  background: #d6175c;
  color: #f9f9fa;
}

.emotion-26:hover,
.emotion-26:active {
  background: none;
  box-shadow: none;
  border: none;
}

.emotion-36 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 1.5rem;
  padding: 0 0.25rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: #fbc600;
  border: none;
  color: #222638;
  background: none;
  margin: auto;
  margin-left: 0.5rem;
}

.emotion-36:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-36:active {
  box-shadow: 0px 0px 0px 3px #fbc60040;
}

.emotion-36:hover,
.emotion-36:active {
  background: #ebb200;
  color: #151a2d;
}

.emotion-36:hover,
.emotion-36:active {
  background: none;
  box-shadow: none;
  border: none;
}

<div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="toaster"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        data-stacked="true"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="info"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.925;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is an info
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-6 emotion-7"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--info"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--info"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="success"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.95;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is a success
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-16 emotion-7"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="error"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.975;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is an error
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-26 emotion-7"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-in="true"
          data-pos="top"
          id="warning"
          role="alert"
          style="--y: 0px; --g: 12; --s: 1;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is a warning
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-36 emotion-7"
            type="button"
          >
            <svg
              class="emotion-8 emotion-9"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
